--- a/index.html
+++ b/index.html
@@ -1,144 +1,223 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>横向卷轴游戏</title>
+    <title>Adventure Runner</title>
     <style>
-        body {
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #87CEEB; /* 天空蓝 */
-        }
         canvas {
-            border: 2px solid #000;
+            border: 2px solid #333;
+            display: block;
+            margin: 20px auto;
+            background: linear-gradient(to bottom, #87CEEB, #E0F6FF);
         }
-        #score {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            font-size: 20px;
-            color: #fff;
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        .game-container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .instructions {
+            background-color: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px auto;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
     </style>
 </head>
 <body>
-    <div id="score">得分: 0</div>
-    <canvas id="gameCanvas" width="800" height="400"></canvas>
+    <div class="game-container">
+        <h1>Adventure Runner</h1>
+        <canvas id="gameCanvas" width="800" height="400"></canvas>
+        <div class="instructions">
+            <h2>How to Play</h2>
+            <p>使用空白鍵跳躍</p>
+            <p>收集金幣並避開障礙物</p>
+            <p>目前分數: <span id="score">0</span> | 最高分數: <span id="highScore">0</span></p>
+        </div>
+    </div>
+
     <script>
         const canvas = document.getElementById('gameCanvas');
         const ctx = canvas.getContext('2d');
+        const scoreElement = document.getElementById('score');
+        const highScoreElement = document.getElementById('highScore');
 
-        let playerX = 50;
-        let playerY = 200;
-        let backgroundX = 0;
+        // 遊戲狀態
         let score = 0;
-        let enemySpeed = 3; // 敌人初始速度
-        let gameSpeed = 2; // 背景滚动速度
-        let frameCount = 0; // 帧计数器
+        let highScore = 0;
+        let gameOver = false;
 
-        const enemies = [];
-        const enemyWidth = 50;
-        const enemyHeight = 50;
+        // 玩家
+        const player = {
+            x: 100,
+            y: 300,
+            width: 40,
+            height: 40,
+            jumping: false,
+            jumpForce: 0,
+            speed: 5
+        };
 
-        // 生成敌人
-        function createEnemy() {
-            const enemyX = canvas.width + Math.random() * 200; // 随机生成位置
-            const enemyY = Math.random() * (canvas.height - enemyHeight);
-            enemies.push({ x: enemyX, y: enemyY });
-        }
+        // 遊戲物件
+        const obstacles = [];
+        const coins = [];
+        let groundY = 340;
 
-        // 绘制敌人
-        function drawEnemies() {
-            ctx.fillStyle = 'black';
-            for (const enemy of enemies) {
-                ctx.fillRect(enemy.x, enemy.y, enemyWidth, enemyHeight);
-                enemy.x -= enemySpeed; // 敌人向左移动
+        // 遊戲設定
+        const gravity = 0.8;
+        const jumpStrength = -15;
+        const obstacleInterval = 1500;
+        const coinInterval = 2000;
+
+        // 事件監聽
+        document.addEventListener('keydown', (e) => {
+            if (e.code === 'Space' && !player.jumping && !gameOver) {
+                player.jumping = true;
+                player.jumpForce = jumpStrength;
             }
-            // 移除超出画布的敌人
-            for (let i = enemies.length - 1; i >= 0; i--) {
-                if (enemies[i].x < -enemyWidth) {
-                    enemies.splice(i, 1);
-                    score++; // 增加得分
-                }
+            if (e.code === 'Space' && gameOver) {
+                resetGame();
             }
+        });
+
+        function createObstacle() {
+            obstacles.push({
+                x: canvas.width,
+                y: groundY - 40,
+                width: 30,
+                height: 40
+            });
         }
 
-        // 碰撞检测
-        function checkCollision() {
-            for (const enemy of enemies) {
-                if (
-                    playerX < enemy.x + enemyWidth &&
-                    playerX + 50 > enemy.x &&
-                    playerY < enemy.y + enemyHeight &&
-                    playerY + 50 > enemy.y
-                ) {
-                    return true; // 碰撞
-                }
-            }
-            return false;
+        function createCoin() {
+            coins.push({
+                x: canvas.width,
+                y: Math.random() * (groundY - 100) + 100,
+                width: 20,
+                height: 20
+            });
         }
 
-        // 绘制背景
-        function drawBackground() {
-            ctx.fillStyle = 'green';
-            ctx.fillRect(backgroundX, 0, 1600, 400); // 背景
-            backgroundX -= gameSpeed; // 背景滚动
-            if (backgroundX < -800) {
-                backgroundX = 0; // 重置背景位置
-            }
-        }
-
-        // 绘制玩家
-        function drawPlayer() {
-            ctx.fillStyle = 'red';
-            ctx.fillRect(playerX, playerY, 50, 50); // 玩家角色
-        }
-
-        // 更新游戏状态
         function update() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height); // 清空画布
-            drawBackground();
-            drawEnemies();
-            drawPlayer();
+            if (gameOver) return;
 
-            if (checkCollision()) {
-                alert('游戏结束！得分: ' + score);
-                document.location.reload(); // 重启游戏
+            // 更新玩家
+            if (player.jumping) {
+                player.y += player.jumpForce;
+                player.jumpForce += gravity;
+
+                if (player.y >= groundY - player.height) {
+                    player.y = groundY - player.height;
+                    player.jumping = false;
+                }
             }
 
-            document.getElementById('score').innerText = '得分: ' + score;
+            // 更新障礙物
+            for (let i = obstacles.length - 1; i >= 0; i--) {
+                obstacles[i].x -= player.speed;
+                
+                // 檢查碰撞
+                if (checkCollision(player, obstacles[i])) {
+                    gameOver = true;
+                    if (score > highScore) {
+                        highScore = score;
+                        highScoreElement.textContent = highScore;
+                    }
+                }
 
-            // 每帧增加敌人速度
-            frameCount++;
-            if (frameCount % 100 === 0) { // 每100帧增加速度
-                enemySpeed += 0.5; // 增加敌人速度
-                gameSpeed += 0.1; // 增加背景滚动速度
+                if (obstacles[i].x + obstacles[i].width < 0) {
+                    obstacles.splice(i, 1);
+                }
             }
 
-            requestAnimationFrame(update); // 请求下一帧
+            // 更新金幣
+            for (let i = coins.length - 1; i >= 0; i--) {
+                coins[i].x -= player.speed;
+
+                // 檢查收集金幣
+                if (checkCollision(player, coins[i])) {
+                    coins.splice(i, 1);
+                    score += 10;
+                    scoreElement.textContent = score;
+                    continue;
+                }
+
+                if (coins[i].x + coins[i].width < 0) {
+                    coins.splice(i, 1);
+                }
+            }
         }
 
-        // 处理键盘事件
-        function keyDownHandler(e) {
-            if (e.key === 'ArrowUp') {
-                playerY -= 100; // 向上移动
-            } else if (e.key === 'ArrowDown') {
-                playerY += 100; // 向下移动
+        function draw() {
+            // 清除畫布
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            // 繪製地面
+            ctx.fillStyle = '#4CAF50';
+            ctx.fillRect(0, groundY, canvas.width, canvas.height - groundY);
+
+            // 繪製玩家
+            ctx.fillStyle = '#2196F3';
+            ctx.fillRect(player.x, player.y, player.width, player.height);
+
+            // 繪製障礙物
+            ctx.fillStyle = '#F44336';
+            obstacles.forEach(obstacle => {
+                ctx.fillRect(obstacle.x, obstacle.y, obstacle.width, obstacle.height);
+            });
+
+            // 繪製金幣
+            ctx.fillStyle = '#FFD700';
+            coins.forEach(coin => {
+                ctx.beginPath();
+                ctx.arc(coin.x + coin.width/2, coin.y + coin.height/2, coin.width/2, 0, Math.PI * 2);
+                ctx.fill();
+            });
+
+            // 繪製遊戲結束畫面
+            if (gameOver) {
+                ctx.fillStyle = 'rgba(0, 0, 0, 0.5)';
+                ctx.fillRect(0, 0, canvas.width, canvas.height);
+                ctx.fillStyle = '#fff';
+                ctx.font = '48px Arial';
+                ctx.fillText('遊戲結束!', canvas.width/2 - 100, canvas.height/2);
+                ctx.font = '24px Arial';
+                ctx.fillText('按空白鍵重新開始', canvas.width/2 - 100, canvas.height/2 + 40);
             }
-            // 限制玩家在画布内移动
-            if (playerY < 0) playerY = 0;
-            if (playerY > canvas.height - 50) playerY = canvas.height - 50;
         }
 
-        // 每隔一段时间生成敌人
-        setInterval(createEnemy, 2000);
+        function checkCollision(rect1, rect2) {
+            return rect1.x < rect2.x + rect2.width &&
+                   rect1.x + rect1.width > rect2.x &&
+                   rect1.y < rect2.y + rect2.height &&
+                   rect1.y + rect1.height > rect2.y;
+        }
 
-        document.addEventListener('keydown', keyDownHandler);
-        update(); // 启动游戏循环
+        function resetGame() {
+            score = 0;
+            scoreElement.textContent = score;
+            gameOver = false;
+            player.y = 300;
+            player.jumping = false;
+            obstacles.length = 0;
+            coins.length = 0;
+        }
+
+        // 遊戲循環
+        function gameLoop() {
+            update();
+            draw();
+            requestAnimationFrame(gameLoop);
+        }
+
+        // 開始遊戲系統
+        setInterval(createObstacle, obstacleInterval);
+        setInterval(createCoin, coinInterval);
+        gameLoop();
     </script>
 </body>
 </html>
