--- a/index.html
+++ b/index.html
@@ -190,13 +190,23 @@
             }
         }
 
-        function checkCollision(rect1, rect2) {
-            return rect1.x < rect2.x + rect2.width &&
-                   rect1.x + rect1.width > rect2.x &&
-                   rect1.y < rect2.y + rect2.height &&
-                   rect1.y + rect1.height > rect2.y;
-        }
+        function checkCollision(rect, circle) {
+    // Find the closest point to the circle within the rectangle
+    let closestX = clamp(circle.x + circle.width / 2, rect.x, rect.x + rect.width);
+    let closestY = clamp(circle.y + circle.height / 2, rect.y, rect.y + rect.height);
 
+    // Calculate the distance between the circle's center and this closest point
+    let distanceX = circle.x + circle.width / 2 - closestX;
+    let distanceY = circle.y + circle.height / 2 - closestY;
+
+    // If the distance is less than the circle's radius, there's a collision
+    let distanceSquared = (distanceX * distanceX) + (distanceY * distanceY);
+    return distanceSquared < (circle.width / 2) * (circle.width / 2);
+}
+
+function clamp(value, min, max) {
+    return Math.max(min, Math.min(max, value));
+}
         function resetGame() {
             score = 0;
             scoreElement.textContent = score;
