--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="instructions">
             <h2>How to Play</h2>
             <p>Press the spacebar to jump</p>
-            <p>Collect coins and avoid obstacles</p>
+            <p>Avoid obstacles</p>
             <p>Current score: <span id="score">0</span> | High score: <span id="highScore">0</span></p>
         </div>
     </div>
@@ -64,14 +64,12 @@
 
         // Game objects
         const obstacles = [];
-        const coins = [];
         let groundY = 340;
 
         // Game settings
         const gravity = 0.8;
         const jumpStrength = -15;
         const obstacleInterval = 1500;
-        const coinInterval = 2000;
 
         // Event listener
         document.addEventListener('keydown', (e) => {
@@ -90,15 +88,6 @@
                 y: groundY - 40,
                 width: 30,
                 height: 40
-            });
-        }
-
-        function createCoin() {
-            coins.push({
-                x: canvas.width,
-                y: Math.random() * (groundY - 100) + 100,
-                width: 20,
-                height: 20
             });
         }
 
@@ -133,24 +122,7 @@
                     obstacles.splice(i, 1);
                 }
             }
-
-            // Update coins
-            // Update the coin collision check
-for (let i = coins.length - 1; i >= 0; i--) {
-    coins[i].x -= player.speed;
-
-    // Check if the player collects the coin (using circle-rectangle collision)
-    if (checkCollision(player, coins[i])) {
-        coins.splice(i, 1);
-        score += 10;
-        scoreElement.textContent = score;
-        continue;
-    }
-
-    if (coins[i].x + coins[i].width < 0) {
-        coins.splice(i, 1);
-    }
-}
+        }
 
         function draw() {
             // Clear the canvas
@@ -170,43 +142,25 @@ for (let i = coins.length - 1; i >= 0; i--) {
                 ctx.fillRect(obstacle.x, obstacle.y, obstacle.width, obstacle.height);
             });
 
-            // Draw coins
-            ctx.fillStyle = '#FFD700';
-            coins.forEach(coin => {
-                ctx.beginPath();
-                ctx.arc(coin.x + coin.width/2, coin.y + coin.height/2, coin.width/2, 0, Math.PI * 2);
-                ctx.fill();
-            });
-
             // Draw game over screen
             if (gameOver) {
                 ctx.fillStyle = 'rgba(0, 0, 0, 0.5)';
                 ctx.fillRect(0, 0, canvas.width, canvas.height);
                 ctx.fillStyle = '#fff';
                 ctx.font = '48px Arial';
-                ctx.fillText('Game Over!', canvas.width/2 - 100, canvas.height/2);
+                ctx.fillText('Game Over!', canvas.width / 2 - 100, canvas.height / 2);
                 ctx.font = '24px Arial';
-                ctx.fillText('Press spacebar to restart', canvas.width/2 - 100, canvas.height/2 + 40);
+                ctx.fillText('Press spacebar to restart', canvas.width / 2 - 100, canvas.height / 2 + 40);
             }
         }
 
-        function checkCollision(rect, circle) {
-    // Find the closest point to the circle within the rectangle
-    let closestX = clamp(circle.x + circle.width / 2, rect.x, rect.x + rect.width);
-    let closestY = clamp(circle.y + circle.height / 2, rect.y, rect.y + rect.height);
+        function checkCollision(rect1, rect2) {
+            return rect1.x < rect2.x + rect2.width &&
+                   rect1.x + rect1.width > rect2.x &&
+                   rect1.y < rect2.y + rect2.height &&
+                   rect1.y + rect1.height > rect2.y;
+        }
 
-    // Calculate the distance between the circle's center and this closest point
-    let distanceX = circle.x + circle.width / 2 - closestX;
-    let distanceY = circle.y + circle.height / 2 - closestY;
-
-    // If the distance is less than the circle's radius, there's a collision
-    let distanceSquared = (distanceX * distanceX) + (distanceY * distanceY);
-    return distanceSquared < (circle.width / 2) * (circle.width / 2);
-}
-
-function clamp(value, min, max) {
-    return Math.max(min, Math.min(max, value));
-}
         function resetGame() {
             score = 0;
             scoreElement.textContent = score;
@@ -214,7 +168,6 @@ function clamp(value, min, max) {
             player.y = 300;
             player.jumping = false;
             obstacles.length = 0;
-            coins.length = 0;
         }
 
         // Game loop
@@ -226,7 +179,6 @@ function clamp(value, min, max) {
 
         // Start game
         setInterval(createObstacle, obstacleInterval);
-        setInterval(createCoin, coinInterval);
         gameLoop();
     </script>
 </body>
